[package]
name = "hyperion-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.169"
lz4-sys = "1.11.1"
bitfield-struct = "0.10.1"
zstd-sys = "2.0.13"
spin = "0.9.8"
once_cell = "1.20.3"
rand = { version = "0.9.0", features = ["small_rng"]}
lazy_static = "1.5.0"
criterion = "0.5.1"
log = "0.4.26"

[features]
compression = []
migration = []
triestats = []


[profile.dev]
debug = true

[profile.release]
debug = true
panic = "abort"

[profile.test]
debug = true

#[lib]
#name = "hyperion"
#crate-type = ["cdylib"]